# FusioCore

./: .clang-tidy  .fusio_history  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  THIRD_PARTY.md
doc/doc/: Welcome.dox
doxygen-header/: header.html
inc/: Version.hpp  Version.hpp.in
inc/Expression/: ExprTkEvaluator.hpp  ExpressionEvaluatorFactory.hpp  FusioInterpreter.hpp  IExpressionEvaluator.hpp
inc/Logger/: Logger.hpp
inc/Shell/: ANSI.hpp  CommandHistory.hpp  Completer.hpp  IShell.hpp  Shell.hpp  Shell_Replxx.hpp
inc/Value/: IValue.hpp  Matrix.hpp  Scalar.hpp  Value.hpp  Vector.hpp
scripts/: compile_run.sh  lint.sh  run.sh
src/: Main.cpp
src/Expression/: ExprTkEvaluator.cpp  ExpressionEvaluatorFactory.cpp  FusioInterpreter.cpp
src/Logger/: Logger.cpp
src/Shell/: CommandHistory.cpp  Completer.cpp  IShell.cpp  Shell.cpp  Shell_Replxx.cpp
src/Value/: Matrix.cpp  Scalar.cpp  Vector.cpp
